--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^8.0.5",
+    "react-responsive-masonry": "^2.7.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
