--- a/package.json
+++ b/package.json
@@ -51,6 +51,14 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "@eslint/js": "^9.24.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^3.2.4",
+    "typescript-eslint": "^8.29.1"
   }
 }
